--- a/DagemovControl/DagemovView/Views/Address/CountryDetails.cshtml
+++ b/DagemovControl/DagemovView/Views/Address/CountryDetails.cshtml
@@ -1,46 +1,56 @@
-﻿@model IEnumerable<DagemovView.Data.Entities.Country>;
+﻿@model DagemovView.Data.Entities.Country;
 @{
-    ViewData["Title"] = "Country Index";
+    ViewData["Title"] = "Country Details";
 }
 <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" />
 
-<h1>Countries</h1>
-<p>
-    <a asp-action="CreateCountry" class="btn btn-primary">Create New Country</a>
-</p>
+<h1>Details of @Model.Name</h1>
+
+<div>
+    <partial name="_CountryDetails" />
+</div>
+
+<hr />
+
+<div>
+    <a asp-action="CreateState" asp-route-id="@Model?.Id" class="btn btn-primary">AddState</a>
+    <a asp-action="CountryEdit" asp-route-id="@Model?.Id" class="btn btn-warning">Edit</a>
+    <a asp-action="Index" class="btn btn-success mt">Back to List</a>
+</div>
+
 <div class="row">
     <div class="col-md-12">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">Countries</h3>
+                <h3 class="panel-title">States</h3>
             </div>
             <div class="panel-body">
                 <table class="table table-hover table-responsive table-striped" id="MyTable">
                     <thead>
                         <tr>
                             <th>
-                                @Html.DisplayNameFor(model => model.Name)
+                                @Html.DisplayNameFor(model => model.States.FirstOrDefault().Name)
                             </th>
                             <th>
-                                @Html.DisplayNameFor(model => model.StatesNumber)
+                                @Html.DisplayNameFor(model => model.States.FirstOrDefault().CityNumber)
                             </th>
                             <th></th>
                         </tr>
                     </thead>
                     <tbody>
-                        @foreach (var item in Model)
+                        @foreach (var item in Model.States)
                         {
                             <tr>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Name)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.StatesNumber)
+                                    @Html.DisplayFor(modelItem => item.CityNumber)
                                 </td>
                                 <td>
-                                    <a asp-action="CountryEdit" asp-route-id="@item.Id" class="btn btn-outline-warning">Edit</a>
-                                    <a asp-action="CountryDetails" asp-route-id="@item.Id" class="btn btn-outline-info">Details</a>
-                                    <a asp-action="CountryDelete" asp-route-id="@item.Id" class="btn btn-outline-danger">Delete</a>
+                                    <a asp-action="EditState" asp-route-id="@item.Id" class="btn btn-outline-warning">Edit</a>
+                                    <a asp-action="DetailsState" asp-route-id="@item.Id" class="btn btn-outline-info">Details</a>
+                                    <a asp-action="DeleteState" asp-route-id="@item.Id" class="btn btn-outline-danger">Delete</a>
                                 </td>
                             </tr>
                         }
