--- a/DagemovControl/DagemovView/Views/Home/Index.cshtml
+++ b/DagemovControl/DagemovView/Views/Home/Index.cshtml
@@ -5,4 +5,12 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+    <p>Este es el que debo usar para schedule</p>
+    <div class="row">
+        <div class="col-6">
+            <label>Date :: </label>
+            <input type="datetime-local" class="form-control" />
+        </div>
+    </div>
 </div>
