--- a/DagemovControl/DagemovView/Views/Address/StateDetails.cshtml
+++ b/DagemovControl/DagemovView/Views/Address/StateDetails.cshtml
@@ -1,61 +1,63 @@
-﻿@model DagemovView.Data.Entities.Country;
+﻿@model DagemovView.Data.Entities.State
+
 @{
-    ViewData["Title"] = "Country Details";
+    ViewData["Title"] = "State Details";
 }
 <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" />
 
 <h1>Details of @Model.Name</h1>
 
 <div>
-    <partial name="_CountryDetails" />
+    <partial name="_StateDetails" />
 </div>
 
 <hr />
 
-<div>
-    <a asp-action="CreateState" asp-route-id="@Model?.Id" class="btn btn-primary">Add State</a>
-    <a asp-action="CountryEdit" asp-route-id="@Model?.Id" class="btn btn-warning">Edit</a>
-    <a asp-action="Index" class="btn btn-success mt">Back to List</a>
-</div>
 
 <div class="row">
     <div class="col-md-12">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">States</h3>
+                <h3 class="panel-title">Cities</h3>
             </div>
             <div class="panel-body">
                 <table class="table table-hover table-responsive table-striped" id="MyTable">
                     <thead>
                         <tr>
                             <th>
-                                @Html.DisplayNameFor(model => model.States.FirstOrDefault().Name)
+                                @Html.DisplayNameFor(model => model.Citys.FirstOrDefault().Name)
                             </th>
                             <th>
-                                @Html.DisplayNameFor(model => model.States.FirstOrDefault().CityNumber)
+                                @Html.DisplayNameFor(model => model.Citys.FirstOrDefault().StreetNumber)
                             </th>
                             <th></th>
                         </tr>
                     </thead>
                     <tbody>
-                        @foreach (var item in Model.States)
+                        @foreach (var item in Model.Citys)
                         {
                             <tr>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Name)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.CityNumber)
+                                    @Html.DisplayFor(modelItem => item.StreetNumber)
                                 </td>
                                 <td>
-                                    <a asp-action="StateEdit" asp-route-id="@item.Id" class="btn btn-outline-warning">Edit</a>
-                                    <a asp-action="StateDetails" asp-route-id="@item.Id" class="btn btn-outline-info">Details</a>
-                                    <a asp-action="StateDelete" asp-route-id="@item.Id" class="btn btn-outline-danger">Delete</a>
+                                    <a asp-action="CityEdit" asp-route-id="@item.Id" class="btn btn-outline-warning">Edit</a>
+                                    <a asp-action="CityDetails" asp-route-id="@item.Id" class="btn btn-outline-info">Details</a>
+                                    <a asp-action="CityDelete" asp-route-id="@item.Id" class="btn btn-outline-danger">Delete</a>
                                 </td>
                             </tr>
                         }
                     </tbody>
                 </table>
+            </div>
+
+            <div>
+                <a asp-action="CreateCity" asp-route-id="@Model?.Id" class="btn btn-primary">Add City</a>
+                <a asp-action="StateEdit" asp-route-id="@Model?.Id" class="btn btn-warning">Edit</a>
+                <a asp-action="StateDetails" class="btn btn-success mt">Back to List</a>
             </div>
         </div>
     </div>
