--- a/DagemovControl/DagemovView/Views/Address/Index.cshtml
+++ b/DagemovControl/DagemovView/Views/Address/Index.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Countries</h1>
 <p>
-    <a asp-action="CreateCountry" class="btn btn-primary">Create New Country</a>
+    <a asp-action="CreateCountry" class="btn btn-primary"><i class="fa-solid fa-plus"></i> Create New Country</a>
 </p>
 <div class="row">
     <div class="col-md-12">
@@ -38,9 +38,9 @@
                                     @Html.DisplayFor(modelItem => item.StatesNumber)
                                 </td>
                                 <td>
-                                    <a asp-action="CountryEdit" asp-route-id="@item.Id" class="btn btn-outline-warning">Edit</a>
-                                    <a asp-action="CountryDetails" asp-route-id="@item.Id" class="btn btn-outline-info">Details</a>
-                                    <a asp-action="CountryDelete" asp-route-id="@item.Id" class="btn btn-outline-danger">Delete</a>
+                                    <a asp-action="CountryEdit" asp-route-id="@item.Id" class="btn btn-warning"><i class="fa-solid fa-pen-to-square" style="color: #e7eb00;"></i> Edit</a>
+                                    <a asp-action="CountryDetails" asp-route-id="@item.Id" class="btn btn-info"><i class="fa-solid fa-circle-info" style="color: #41a2ec;"></i> Details</a>
+                                    <a asp-action="CountryDelete" asp-route-id="@item.Id" class="btn btn-danger"><i class="fa-solid fa-delete-left" style="color: #690202;"></i> Delete</a>
                                 </td>
                             </tr>
                         }
